Added endpoint to add files to event booking
